--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="./css/app.css">
     </head>
     <body>
-        <script type="text/javascript" src="../build/app.js"></script>
+        <script type="text/javascript" src="./app.js"></script>
     </body>
 </html>
