--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Baiku Race</title>
-        <link rel="stylesheet" href="./css/app.css">
     </head>
     <body>
-        <script type="text/javascript" src="./app.js"></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
